--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -6,9 +6,16 @@
     <script type="text/javascript" src="scripts/keyboard.js"></script>
 
     <script type="text/javascript" src="scripts/programs/_.js"></script>
-    <script type="text/javascript" src="scripts/programs/g.js"></script>
+    <script type="text/javascript" src="scripts/programs/G.js"></script>
+
+    <script type="text/javascript" src="scripts/programs/v.js"></script>
+    <script type="text/javascript" src="scripts/programs/D.js"></script>
+
+    <script type="text/javascript" src="scripts/programs/u.js"></script>
+    <script type="text/javascript" src="scripts/programs/d.js"></script>
+    <script type="text/javascript" src="scripts/programs/l.js"></script>
     <script type="text/javascript" src="scripts/programs/r.js"></script>
-    
+
     <link rel="stylesheet" type="text/css" href="links/reset.css"/>
     <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="links/main.css"/>
@@ -23,9 +30,9 @@
         pico.start();
 
         var keyboard = new Keyboard();
-        document.onkeyup = function(event){ keyboard.listen_onkeyup(event); };
+        // document.onkeyup = function(event){ keyboard.listen_onkeyup(event); };
         document.onkeydown = function(event){ keyboard.listen_onkeydown(event); };
-        document.addEventListener('mousedown', function(e){ oquonie.mousedown(e); }, false);
+        // document.addEventListener('mousedown', function(e){ oquonie.mousedown(e); }, false);
 
       </script>
   </body>
