Added kill rune

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -6,10 +6,10 @@
     <script type="text/javascript" src="scripts/keyboard.js"></script>
 
     <script type="text/javascript" src="scripts/programs/_.js"></script>
-    <script type="text/javascript" src="scripts/programs/G.js"></script>
+    <script type="text/javascript" src="scripts/programs/g.js"></script>
 
-    <script type="text/javascript" src="scripts/programs/v.js"></script>
-    <script type="text/javascript" src="scripts/programs/D.js"></script>
+    <script type="text/javascript" src="scripts/programs/c.js"></script>
+    <script type="text/javascript" src="scripts/programs/k.js"></script>
 
     <script type="text/javascript" src="scripts/programs/u.js"></script>
     <script type="text/javascript" src="scripts/programs/d.js"></script>
