Added increment rune

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="scripts/programs/g.js"></script>
 
     <script type="text/javascript" src="scripts/programs/c.js"></script>
+    <script type="text/javascript" src="scripts/programs/i.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
 
     <script type="text/javascript" src="scripts/programs/u.js"></script>
