--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -9,12 +9,15 @@
 
     <script type="text/javascript" src="scripts/programs/c.js"></script>
     <script type="text/javascript" src="scripts/programs/d.js"></script>
+    <script type="text/javascript" src="scripts/programs/e.js"></script>
     <script type="text/javascript" src="scripts/programs/g.js"></script>
     <script type="text/javascript" src="scripts/programs/i.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
     <script type="text/javascript" src="scripts/programs/r.js"></script>
     <script type="text/javascript" src="scripts/programs/u.js"></script>
+    <script type="text/javascript" src="scripts/programs/w.js"></script>
+    <script type="text/javascript" src="scripts/programs/s.js"></script>
 
     <link rel="stylesheet" type="text/css" href="links/reset.css"/>
     <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
