--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" src="scripts/programs/_.js"></script>
 
+    <script type="text/javascript" src="scripts/programs/b.js"></script>
     <script type="text/javascript" src="scripts/programs/c.js"></script>
     <script type="text/javascript" src="scripts/programs/d.js"></script>
     <script type="text/javascript" src="scripts/programs/e.js"></script>
@@ -15,9 +16,10 @@
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
     <script type="text/javascript" src="scripts/programs/r.js"></script>
+    <script type="text/javascript" src="scripts/programs/s.js"></script>
+    <script type="text/javascript" src="scripts/programs/t.js"></script>
     <script type="text/javascript" src="scripts/programs/u.js"></script>
     <script type="text/javascript" src="scripts/programs/w.js"></script>
-    <script type="text/javascript" src="scripts/programs/s.js"></script>
 
     <link rel="stylesheet" type="text/css" href="links/reset.css"/>
     <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
