--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -11,10 +11,12 @@
     <script type="text/javascript" src="scripts/programs/c.js"></script>
     <script type="text/javascript" src="scripts/programs/d.js"></script>
     <script type="text/javascript" src="scripts/programs/e.js"></script>
+    <script type="text/javascript" src="scripts/programs/f.js"></script>
     <script type="text/javascript" src="scripts/programs/g.js"></script>
     <script type="text/javascript" src="scripts/programs/i.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
+    <script type="text/javascript" src="scripts/programs/n.js"></script>
     <script type="text/javascript" src="scripts/programs/r.js"></script>
     <script type="text/javascript" src="scripts/programs/s.js"></script>
     <script type="text/javascript" src="scripts/programs/t.js"></script>
