--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="scripts/programs/e.js"></script>
     <script type="text/javascript" src="scripts/programs/f.js"></script>
     <script type="text/javascript" src="scripts/programs/g.js"></script>
+    <script type="text/javascript" src="scripts/programs/h.js"></script>
     <script type="text/javascript" src="scripts/programs/i.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
