Implemented odd even

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -18,7 +18,9 @@
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
     <script type="text/javascript" src="scripts/programs/n.js"></script>
+    <script type="text/javascript" src="scripts/programs/o.js"></script>
     <script type="text/javascript" src="scripts/programs/p.js"></script>
+    <script type="text/javascript" src="scripts/programs/q.js"></script>
     <script type="text/javascript" src="scripts/programs/r.js"></script>
     <script type="text/javascript" src="scripts/programs/s.js"></script>
     <script type="text/javascript" src="scripts/programs/t.js"></script>
