--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="scripts/programs/i.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
+    <script type="text/javascript" src="scripts/programs/m.js"></script>
     <script type="text/javascript" src="scripts/programs/n.js"></script>
     <script type="text/javascript" src="scripts/programs/o.js"></script>
     <script type="text/javascript" src="scripts/programs/p.js"></script>
@@ -26,6 +27,7 @@
     <script type="text/javascript" src="scripts/programs/t.js"></script>
     <script type="text/javascript" src="scripts/programs/u.js"></script>
     <script type="text/javascript" src="scripts/programs/w.js"></script>
+    <script type="text/javascript" src="scripts/programs/x.js"></script>
 
     <link rel="stylesheet" type="text/css" href="links/reset.css"/>
     <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
