--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="scripts/keyboard.js"></script>
 
     <script type="text/javascript" src="scripts/programs/_.js"></script>
+    <script type="text/javascript" src="scripts/programs/special/output.js"></script>
 
     <script type="text/javascript" src="scripts/programs/b.js"></script>
     <script type="text/javascript" src="scripts/programs/c.js"></script>
