Implemented the a glyph

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="scripts/programs/_.js"></script>
     <script type="text/javascript" src="scripts/programs/special/output.js"></script>
 
+    <script type="text/javascript" src="scripts/programs/a.js"></script>
     <script type="text/javascript" src="scripts/programs/b.js"></script>
     <script type="text/javascript" src="scripts/programs/c.js"></script>
     <script type="text/javascript" src="scripts/programs/d.js"></script>
