--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="scripts/programs/g.js"></script>
     <script type="text/javascript" src="scripts/programs/h.js"></script>
     <script type="text/javascript" src="scripts/programs/i.js"></script>
+    <script type="text/javascript" src="scripts/programs/j.js"></script>
     <script type="text/javascript" src="scripts/programs/k.js"></script>
     <script type="text/javascript" src="scripts/programs/l.js"></script>
     <script type="text/javascript" src="scripts/programs/m.js"></script>
