--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="scripts/programs/u.js"></script>
     <script type="text/javascript" src="scripts/programs/w.js"></script>
     <script type="text/javascript" src="scripts/programs/x.js"></script>
+    <script type="text/javascript" src="scripts/programs/y.js"></script>
     <script type="text/javascript" src="scripts/programs/z.js"></script>
 
     <link rel="stylesheet" type="text/css" href="links/reset.css"/>
