--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="scripts/programs/u.js"></script>
     <script type="text/javascript" src="scripts/programs/w.js"></script>
     <script type="text/javascript" src="scripts/programs/x.js"></script>
+    <script type="text/javascript" src="scripts/programs/v.js"></script>
     <script type="text/javascript" src="scripts/programs/y.js"></script>
     <script type="text/javascript" src="scripts/programs/z.js"></script>
 
