--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="scripts/program.js"></script>
     <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/keyboard.js"></script>
+    <script type="text/javascript" src="scripts/synth.js"></script>
 
     <script type="text/javascript" src="scripts/programs/_.js"></script>
 
