--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -54,7 +54,7 @@
       pico.install();
       pico.start();
 
-      // var logo = new Logo(); logo.install(120); setTimeout(function(){ logo.remove(); }, 5500);
+      var logo = new Logo(); logo.install(120); setTimeout(function(){ logo.remove(); }, 5500);
 
       var keyboard = new Keyboard();
       document.onkeydown = function(event){ keyboard.listen_onkeydown(event); };
