--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="scripts/keyboard.js"></script>
     <script type="text/javascript" src="scripts/events.js"></script>
 
-    <script type="text/javascript" src="scripts/programs/_.js"></script>
+    <script type="text/javascript" src="scripts/programs/default.js"></script>
     <script type="text/javascript" src="scripts/programs/a.js"></script>
     <script type="text/javascript" src="scripts/programs/b.js"></script>
     <script type="text/javascript" src="scripts/programs/c.js"></script>
