--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -68,6 +68,7 @@
       pico.controller.add("default","File","Open",() => { pico.open(); },"CmdOrCtrl+O");
 
       pico.controller.add("default","Program","Play/Pause",() => { pico.pause(); },"CmdOrCtrl+P");
+      pico.controller.add("default","Program","Run",() => { pico.run(true); },"Enter");
 
       pico.controller.add("default","Theme","Noir",() => { pico.theme.noir(); },"CmdOrCtrl+Shift+1");
       pico.controller.add("default","Theme","Pale",() => { pico.theme.pale(); },"CmdOrCtrl+Shift+2");
