--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -38,6 +38,8 @@
       terminal.controller.add("default","File","Open",() => { terminal.open(); },"CmdOrCtrl+O")
 
       terminal.controller.add("default","Program","Play/Pause",() => { terminal.pause(); },"Space")
+      terminal.controller.add("default","Program","Incr. Speed",() => { terminal.modSpeed(10); },">")
+      terminal.controller.add("default","Program","Decr. Speed",() => { terminal.modSpeed(-10); },"<")
 
       terminal.controller.add("default","Theme","Noir",() => { terminal.theme.noir(); },"CmdOrCtrl+Shift+1")
       terminal.controller.add("default","Theme","Pale",() => { terminal.theme.pale(); },"CmdOrCtrl+Shift+2")
