--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -15,8 +15,10 @@
   <body>
     <script>     
       const Orca = require('../core/orca')
+      const library = require('../core/library')
       const Terminal = require('./scripts/terminal')
-      const orca = new Orca(57, 25)
+
+      const orca = new Orca(library)
       const terminal = new Terminal(orca)
       const keyboard = new Keyboard()
       
